--- a/config/app.json
+++ b/config/app.json
@@ -171,7 +171,8 @@
   },
 
   // Page Controllers
-  "controllers": {
+  "page-controllers": {
+    "Content Page": "\\StemTheme\\Base\\Controllers\\SamplePageController"
   },
 
   // Custom post types to model map
